# canopy

./: README.md
backend/: README.md  pyproject.toml
backend/canopy/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  TreeView.js
