[tool.poetry]
name = "canopy-backend"
version = "0.1.0"
description = ""
authors = ["Ratuja Reddy <ratuja@gmial.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.12"}


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
